DNA 741: Comment out ms-word-break and word-break rules to fix word wrapping issue in Firefox, IE 8/9/10; Also comment out display:table because this causes IE9 and 10 to have a smaller width; it is more noticeable when the availability box is long and the notes field becomes a narrow column; Move notes field toward bottom in field order - librarians say this often contains junk now and this is a workaround for the IE8 URL wrapping bug, which is reintroduced by removing ms-word-break and word-break

--- a/app/assets/stylesheets/cornell/_item-record.css.scss
+++ b/app/assets/stylesheets/cornell/_item-record.css.scss
@@ -81,15 +81,15 @@ dl.dl-horizontal {
 }
 
 dd.blacklight-notes {
-	-ms-word-break: break-all;
-	// word-break: break-all; - remove this style to fix word wrap error in Firefox (DNA 741)
+	// -ms-word-break: break-all; - remove this style to fix word wrap bug in IE 8/9/10 (DNA 741)
+	// word-break: break-all; - remove this style to fix word wrap bug in Firefox (DNA 741)
 	/* Non standard for webkit */
 	word-wrap: break-word;
 	word-break:break-word;
 	overflow-wrap:break-word;
 	-webkit-hyphens: auto;
   	hyphens: auto;
-  	display: table;
+  	// display: table; - remove this because it causes IE 9 and 10 to have a smaller width for metadata display for this field. Wasted space.
 }
 
 .active-hierarchy {
